--- a/_sass/_directory.scss
+++ b/_sass/_directory.scss
@@ -24,16 +24,21 @@
                 grid-template-columns: repeat(12, 1fr);
                 grid-gap: 0.5rem;
                 .avatar{
-                    width: 100%;
-                    height: 100%;
+                    background-size: cover;
                     margin: 0;
                     box-sizing: border-box;
                     border-radius: 50%;
+                    display: block;
                     background-color: white;
                     transition: transform 80ms ease-in-out;
+                    overflow: hidden;
                     &:hover{
                         border-color: darken($border-color,10);
                         transform: scale(2);
+                    }
+                    img{
+                        height: 100%;
+                        width: 100%;
                     }
                 }
             }
