added more stuff

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
 <aside class="sidebar">
-    <a href="#designers">Designers</a>
+    <a href="#designers">Design teams</a>
     <a href="#events">Events</a>
     <a href="#jobs">Jobs</a>
     <a href="#resources">Resources</a>
