--- a/_includes/stage.html
+++ b/_includes/stage.html
@@ -1,4 +1,7 @@
 <main class="stage">
     {%include /sections/intro.html%}
     {%include /sections/designers.html%}
+    {%include /sections/events.html%}
+    {%include /sections/jobs.html%}
+    {%include /sections/resources.html%}
 </main>
