--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,10 @@
     <title>{{site.title}}: {{page.title}}</title>
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/styles.css">
+
+    <!-- JS -->
+    <script src = "https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
+    <script src = "/assets/js/index.js"></script>
 </head>
 <body>
     {{content}}
